test/type-error-3.err.expect
test/type-error-3.ktn:3:1: error: cannot solve scalar type constraint char (type of x) = [char (from baq)] (input to baq)
test/type-error-3.ktn:3:9: note: char (type of x) is from here
test/type-error-3.ktn:3:9: note: [char (from baq)] (input to baq) is from here
