test/type-error-3.ktn
// TODO(strager): Improve error location reporting.

def baq ([char] [char] -> char):
  ->q; q 0 __get __from_some
  ->x y; x
